bridge/base/0-cpnucleo-dev-namespace.yaml
#! 0-cpnucleo-dev-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: cpnucleo-dev
    labels:
        com.docker.compose.project: cpnucleo-dev
