bridge/base/db-deployment.yaml
#! db-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: db
    namespace: cpnucleo-dev
    labels:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: db
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: cpnucleo-dev
            com.docker.compose.service: db
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: cpnucleo-dev
                com.docker.compose.service: db
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: db-cpnucleo
                  image: postgres:16.7
                  imagePullPolicy: IfNotPresent
                  command: [postgres -c checkpoint_timeout=600 -c max_wal_size=4096 -c synchronous_commit=0 -c fsync=0 -c full_page_writes=0]
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - pg_isready -U postgres
                    periodSeconds: 5
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: db-5432
                      containerPort: 5432
                  volumeMounts:
                    - name: var-lib-postgresql-data
                      mountPath: /var/lib/postgresql/data
                    - name: docker-entrypoint-initdb-d
                      mountPath: /docker-entrypoint-initdb.d
            volumes:
                - name: var-lib-postgresql-data
                  persistentVolumeClaim:
                    claimName: db-db-data
                - name: docker-entrypoint-initdb-d
                  hostPath:
                    path: /Users/jonathanperis/Projects/cpnucleo/docker-entrypoint-initdb.d
