bridge/base/identityapi-cpnucleo-deployment.yaml
#! identityapi-cpnucleo-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: identityapi-cpnucleo
    namespace: cpnucleo-dev
    labels:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: identityapi-cpnucleo
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: cpnucleo-dev
            com.docker.compose.service: identityapi-cpnucleo
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: cpnucleo-dev
                com.docker.compose.service: identityapi-cpnucleo
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: identityapi-cpnucleo
                  image: jonathanperis/cpnucleo-identity-api:latest
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['curl -f http://localhost:5010/healthz']
                    periodSeconds: 30
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: identityap-5010
                      containerPort: 5010
