bridge/base/nginx-deployment.yaml
#! nginx-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx
    namespace: cpnucleo-dev
    labels:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: nginx
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: cpnucleo-dev
            com.docker.compose.service: nginx
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: cpnucleo-dev
                com.docker.compose.service: nginx
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: nginx-cpnucleo
                  image: nginx
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: nginx-9999
                      containerPort: 9999
                    - name: nginx-80
                      containerPort: 80
                  volumeMounts:
                    - name: etc-nginx-nginx-conf
                      mountPath: /etc/nginx/nginx.conf
                      readOnly: true
            volumes:
                - name: etc-nginx-nginx-conf
                  hostPath:
                    path: /Users/jonathanperis/Projects/cpnucleo/nginx.conf
                  readOnly: true
