bridge/base/webapi2-cpnucleo-deployment.yaml
#! webapi2-cpnucleo-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: webapi2-cpnucleo
    namespace: cpnucleo-dev
    labels:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: webapi2-cpnucleo
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: cpnucleo-dev
            com.docker.compose.service: webapi2-cpnucleo
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: cpnucleo-dev
                com.docker.compose.service: webapi2-cpnucleo
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: webapi2-cpnucleo
                  image: jonathanperis/cpnucleo-web-api:latest
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['curl -f http://localhost:8080/healthz']
                    periodSeconds: 30
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: webapi2-cp-8080
                      containerPort: 8080
