bridge/base/grpcserver-cpnucleo-expose.yaml
#! grpcserver-cpnucleo-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: grpcserver-cpnucleo
    namespace: cpnucleo-dev
    labels:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: grpcserver-cpnucleo
spec:
    selector:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: grpcserver-cpnucleo
    ports:
        - name: grpcserver-5020
          port: 5020
          targetPort: grpcserver-5020
