bridge/base/identityapi-cpnucleo-expose.yaml
#! identityapi-cpnucleo-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: identityapi-cpnucleo
    namespace: cpnucleo-dev
    labels:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: identityapi-cpnucleo
spec:
    selector:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: identityapi-cpnucleo
    ports:
        - name: identityap-5010
          port: 5010
          targetPort: identityap-5010
