bridge/base/identityapi-cpnucleo-service.yaml
#! identityapi-cpnucleo-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: identityapi-cpnucleo-published
    namespace: cpnucleo-dev
    labels:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: identityapi-cpnucleo
spec:
    selector:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: identityapi-cpnucleo
    ports:
        - name: identityap-5200
          port: 5200
          protocol: TCP
          targetPort: identityap-5010

# check if there is at least one published port
