bridge/base/nginx-expose.yaml
#! nginx-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: nginx
    namespace: cpnucleo-dev
    labels:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: nginx
spec:
    selector:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: nginx
    ports:
        - name: nginx-9999
          port: 9999
          targetPort: nginx-9999
        - name: nginx-80
          port: 80
          targetPort: nginx-80
