bridge/base/otel-lgtm-expose.yaml
#! otel-lgtm-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: otel-lgtm
    namespace: cpnucleo-dev
    labels:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: otel-lgtm
spec:
    selector:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: otel-lgtm
    ports:
        - name: otel-lgtm-4318
          port: 4318
          targetPort: otel-lgtm-4318
        - name: otel-lgtm-3000
          port: 3000
          targetPort: otel-lgtm-3000
        - name: otel-lgtm-4317
          port: 4317
          targetPort: otel-lgtm-4317
