bridge/base/otel-lgtm-service.yaml
#! otel-lgtm-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: otel-lgtm-published
    namespace: cpnucleo-dev
    labels:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: otel-lgtm
spec:
    selector:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: otel-lgtm
    ports:
        - name: otel-lgtm-3000
          port: 3000
          protocol: TCP
          targetPort: otel-lgtm-3000
        - name: otel-lgtm-4317
          port: 4317
          protocol: TCP
          targetPort: otel-lgtm-4317
        - name: otel-lgtm-4318
          port: 4318
          protocol: TCP
          targetPort: otel-lgtm-4318

# check if there is at least one published port
