bridge/base/webapi1-cpnucleo-expose.yaml
#! webapi1-cpnucleo-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: webapi1-cpnucleo
    namespace: cpnucleo-dev
    labels:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: webapi1-cpnucleo
spec:
    selector:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: webapi1-cpnucleo
    ports:
        - name: webapi1-cp-8080
          port: 8080
          targetPort: webapi1-cp-8080
