bridge/base/webapi2-cpnucleo-expose.yaml
#! webapi2-cpnucleo-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: webapi2-cpnucleo
    namespace: cpnucleo-dev
    labels:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: webapi2-cpnucleo
spec:
    selector:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: webapi2-cpnucleo
    ports:
        - name: webapi2-cp-8080
          port: 8080
          targetPort: webapi2-cp-8080
