bridge/base/webclient-cpnucleo-expose.yaml
#! webclient-cpnucleo-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: webclient-cpnucleo
    namespace: cpnucleo-dev
    labels:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: webclient-cpnucleo
spec:
    selector:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: webclient-cpnucleo
    ports:
        - name: webclient--5030
          port: 5030
          targetPort: webclient--5030
