bridge/base/webclient-cpnucleo-service.yaml
#! webclient-cpnucleo-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: webclient-cpnucleo-published
    namespace: cpnucleo-dev
    labels:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: webclient-cpnucleo
spec:
    selector:
        com.docker.compose.project: cpnucleo-dev
        com.docker.compose.service: webclient-cpnucleo
    ports:
        - name: webclient--5400
          port: 5400
          protocol: TCP
          targetPort: webclient--5030
